--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@sveltejs/package": "next",
+    "@types/debounce": "^1.2.1",
     "svelte": "^3.53.1",
     "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
@@ -21,6 +22,7 @@
   },
   "type": "module",
   "dependencies": {
+    "debounce": "^1.2.1",
     "sass": "^1.56.1"
   }
 }
