--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/checkout@v3
       - run: npm install
       - run: npm run build
+      - name: list directory
+        run: ls -a
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
