--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - run: npm install
-      - run: npm run build
+      - run: npm run build:site
       - name: list directory
         run: ls -a
       - name: Upload artifact
