--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "type": "module",
   "dependencies": {
+    "monaco-editor": "^0.34.1",
     "print-js": "^1.6.0",
     "sass": "^1.56.1"
   }
