--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "timeline-svelte",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite dev --host",
     "build:site": "vite build",
     "build:package": "svelte-kit sync && svelte-package",
     "prepublishOnly": "echo 'Did you mean to publish `./package/`, instead of `./`?' && exit 1",
