--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/adapter-static": "^1.0.0-next.48",
     "@sveltejs/kit": "next",
     "@sveltejs/package": "next",
+    "@types/qs": "^6.9.7",
     "svelte": "^3.53.1",
     "svelte-check": "^2.9.2",
     "svelte-preprocess": "^4.10.7",
@@ -26,7 +27,9 @@
     "html-to-image": "^1.11.1",
     "monaco-editor": "^0.34.1",
     "print-js": "^1.6.0",
+    "qs": "^6.11.1",
     "sass": "^1.56.1",
-    "svelte-notifications": "^0.9.98"
+    "svelte-notifications": "^0.9.98",
+    "zod": "^3.21.4"
   }
 }
